--- a/studio-frontend/src/App.css
+++ b/studio-frontend/src/App.css
@@ -2,14 +2,26 @@
   text-align: center;
 }
 
-.App-logo {
+.page-bottom-navigation {
+  justify-content: space-between;
+}
+
+.page-navigation-left {
+  flex-direction: row;
+}
+.page-navigation-right {
+  flex-direction: row-reverse;
+}
+
+.app-logo {
   height: 40vmin;
   pointer-events: none;
+  fill: #20d862;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .app-logo {
+    animation: app-logo-spin infinite 20s linear;
   }
 }
 
@@ -24,11 +36,25 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.app-link {
+  color: #20d862;
+  display: flex;
+  align-items: center;
+  font-size: 24px;
 }
 
-@keyframes App-logo-spin {
+.add-icon {
+  border-radius: 50%;
+  box-shadow: 0px 0px 2px 2px #20d862;
+  cursor: pointer;
+  margin: 0 10px
+}
+
+.add-icon:hover {
+  box-shadow: 0px 0px 2px 1px #20d862;
+}
+
+@keyframes app-logo-spin {
   from {
     transform: rotate(0deg);
   }
